# dagster-plus-mcp

./: CLAUDE.md  README.md  pyproject.toml
dagster_plus_mcp/: __main__.py  queries.py  schema.json  server.py  tools.py
scripts/: refresh_schema.py  validate_queries.py
tests/: conftest.py  test_tools.py
