[project]
name = "dagster-plus-mcp"
version = "0.1.0"
description = "MCP server for the Dagster+ GraphQL API"
requires-python = ">=3.13"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_plus_mcp"]
