[project]
name = "dagster-plus-mcp"
version = "0.1.0"
description = "MCP server for the Dagster+ GraphQL API"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27", "mcp>=1.0.0"]

[dependency-groups]
dev = ["graphql-core>=3.2", "pytest>=8", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_plus_mcp"]
